fix test by `add-opens`